# ParallelSorting

./: CMakeLists.txt  CppProperties.json
src/: main.cpp  mergesort.h  quicksort.h
